tests/neg-custom-args/captures/filevar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/filevar.scala:15:12 --------------------------------------
15 |  withFile: f =>       // error with level checking, was OK under both schemes before
   |            ^
   |Found:    (f: File^?) ->? Unit
   |Required: (f: File^{l}) => Unit
   |
   |where:    => refers to a fresh root capability created in anonymous function of type (using l²: scala.caps.Capability): File^{l²} -> Unit when instantiating expected result type (f: File^{l}) ->{cap} Unit of function literal
   |
   |Note that capability l.type
   |cannot be included in outer capture set ? of parameter f.
16 |    val o = Service()
17 |    o.file = f
18 |    o.log
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg-custom-args/captures/filevar.scala:11:55 ---------------------------------------------------------
11 |def withFile[T](op: (l: caps.Capability) ?-> (f: File^{l}) => T): T =
   |                                                       ^
   |                                                       redundant capture: File already accounts for l.type
